<resources>
    <!--Textos correspondientes a la pagina de registro-->
    <string name="hint_dni">DNI</string>
    <string name="hint_mail">Correo electronico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="txt_btn_submit">Registrarse</string>



    <string name="app_name">Punto de Apoyo</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicio">Ingresar</string>
    <string name="facebook">Ingresar con Facebook</string>
    <string name="twitter">Ingresar con Twitter</string>
    <string name="login1">Olvidé mi contraseña</string>
    <string name="reg">Registrarme</string>
    <string name="nconfcontraseña">Confirmar contraseña</string>
    <string name="cyenviar">Confirmar y enviar</string>
    <string name="bienvenido">¡Bienvenido/a a Punto de Apoyo!</string>
    <string name="rcorreo">Para recuperar su contraseña debe ingresar el correo con el que se registró</string>
    <string name="mensajerecuperacion">Se le enviará un correo tan pronto como nos sea posible,muchas gracias.</string>
    <string name="mapa">Mapa</string>
    <string name="lista">Lista</string>
    <string name="mensajeUbicacion">Por favor activa la ubicación para continuar con la aplicacion</string>
    <string name="activarUbicacion">Activar ubicacion</string>
    <string name="dialog_tittle">Añadir contacto</string>
    <string name="abrirAjustes">Abrir configuracion</string>
    <string name="empty_contacts">Aún no has añadido ningún contacto</string>

    <string name="contactosSeleccionados">Contactos seleccionados:</string>
    <string name="contactosAñadir">Añadir</string>
    <string name="contactosRemover">Remover</string>
    <string name="menu_settings">Configurar contactos</string>
    <string name="menu_help">Ayuda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tab_map">Mapa</string>
    <string name="tab_list">Lista</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="title_activity_contacs">Contactos seleccionados</string>
    <string name="remove_contact_tittle">Eliminar contacto</string>
    <string name="remove_contact_message">¿Está seguro que quiere eliminar el contacto seleccionado?</string>
    <string name="remove_contact_delete">Eliminar</string>
    <string name="remove_contact_exit">Salir</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="widget_name">Botón PDA</string>
    <string name="searchbar_hint">Busca lugares</string>
    <string name="tittle_contacts">Contactos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
