<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRecovery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gabriel.puntodeapoyo.RecoveryPasswordActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/recoveryPassword"
        android:layout_width="345dp"
        android:layout_height="114dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:text="@string/rcorreo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recoveryMail"
        android:layout_width="@dimen/register_width"
        android:layout_height="@dimen/register_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dip">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recoveryDNI"
        android:layout_width="@dimen/register_width"
        android:layout_height="@dimen/register_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_margin_top">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dni" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/recoveySubmit"
        style="@style/button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/register_margin_top"
        android:text="@string/cyenviar"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="360dp" />

</LinearLayout>
