<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registroLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gabriel.puntodeapoyo.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/bienvenido"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterDni"
                android:layout_width="@dimen/register_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/register_margin_top">

                <EditText
                    android:id="@+id/resgisterDNI"
                    android:layout_width="@dimen/register_width"
                    android:layout_height="@dimen/register_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="162dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_dni"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterMail"
                android:layout_width="@dimen/register_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/register_margin_top">

                <EditText
                    android:id="@+id/registerMail"
                    android:layout_width="@dimen/register_width"
                    android:layout_height="@dimen/register_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_mail"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterPassword"
                android:layout_width="@dimen/register_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/register_margin_top">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="@dimen/register_width"
                    android:layout_height="@dimen/register_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="@dimen/register_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/register_margin_top">

                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="@dimen/register_width"
                    android:layout_height="@dimen/register_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/confirmarYEnviar"
                style="@style/button"
                android:layout_width="@dimen/register_width"
                android:layout_height="@dimen/register_height"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="@dimen/register_margin_top"
                android:layout_marginTop="@dimen/register_margin_top"
                android:text="@string/txt_btn_submit" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
