<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.gabriel.puntodeapoyo.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="139dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/widget_preview"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:fontFamily="Roboto"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dip"
        android:textColor="@color/loginbtns"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/contraseña"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/round_cornes_bottom"
        android:ems="10"
        android:fontFamily="Roboto"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:paddingLeft="30dip"
        android:textColor="@color/loginbtns"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/iniciar"
        style="@style/button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_button"
        android:text="@string/inicio"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/facebook"
        style="@style/button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:drawableLeft="@drawable/fb"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:text="@string/facebook"
        app:layout_constraintBottom_toTopOf="@+id/twitter"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/twitter"
        style="@style/button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:drawableLeft="@drawable/twitter"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:text="@string/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/login1"
        android:textColor="@android:color/white"
        android:textSize="11dip"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/twitter"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/twitter" />

    <Button
        android:id="@+id/registro"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:background="@android:color/transparent"
        android:text="@string/reg"
        android:textColor="@android:color/white"
        android:textSize="11dip"
        app:layout_constraintRight_toRightOf="@+id/twitter"
        app:layout_constraintTop_toBottomOf="@+id/twitter"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
